# MTGDeckReck

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  agent-driven-dev-plan.md  justfile  main.py  pyproject.toml
.claude/rules/: embed-semantic-text-only.md  evals-measure-retrieval.md  fuse-with-rrf.md  no-llm-legality.md  one-card-one-record.md  planner-typed-output.md  vector-keyed-by-oracle-id.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
docs/: glossary.md  spec.md  vision.md
docs/adr/: 0001-legality-color-as-filters-not-prompts.md  0002-one-card-one-record.md  0003-sectioned-format-templates.md  0004-planner-typed-query-schema.md  0005-curation-groups-by-role.md  0006-eval-measures-retrieval-recall.md  0007-multi-channel-embedding.md  0008-rrf-fusion-not-raw-scores.md  0009-parquet-card-corpus.md  0010-oracle-id-identity-key.md  0011-evaluation-scope-and-baseline-semantics.md  0012-embedding-model.md  0013-structural-card-predicate.md  0014-absent-channel-no-vector.md  0015-wholesale-index-rebuild.md  0016-ingest-every-printing.md  0017-structural-completeness-is-required.md  0018-card-level-platform-availability.md  0019-flavor-channel-embeds-one-text.md  0020-eval-case-is-a-corpus-predicate.md  README.md  template.md
notebooks/: 01-scryfall-exploration.ipynb  02-embedding-exploration.ipynb
src/mtg_rag/: cli.py  corpus.py  corpus_config.py
src/mtg_rag/embed/: __main__.py  channels.py  config.py  encoder.py  index.py
src/mtg_rag/evals/: __main__.py  cases.py  config.py  golden.toml  metrics.py  predicates.py  runner.py
src/mtg_rag/ingest/: __main__.py  config.py  merge.py  normalize.py  scryfall.py
src/mtg_rag/plan/: orchestrator.py  query.py
src/mtg_rag/retrieve/: __main__.py  config.py  constraints.py  filters.py  fusion.py  pool.py  rank.py  search.py
src/mtg_rag/store/: chroma.py  config.py
tests/: conftest.py  test_cli.py  test_corpus.py  test_embed_channels.py  test_embed_encoder.py  test_embed_imports.py  test_embed_index.py  test_evals_cases.py  test_evals_metrics.py  test_evals_runner.py  test_ingest_config.py  test_ingest_merge.py  test_ingest_normalize.py  test_ingest_scryfall.py  test_orchestrator.py  test_plan_query.py  test_rank.py  test_retrieve_filters.py  test_retrieve_fusion.py  test_retrieve_pool.py  test_retrieve_search.py  test_smoke.py  test_store_chroma.py
tests/fixtures/: cards.jsonl  printings.jsonl
