[project]
name = "mtgdeckreck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "polars>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtg_rag"]

[dependency-groups]
dev = [
    "ruff>=0.12",
    "pyright>=1.1",
    "pytest>=8.4",
    "pre-commit>=4.0",
    "jupyterlab>=4.0",
    "nbstripout>=0.8",
    # Not imported by our code. polars' public signatures reference numpy types,
    # which resolve to Unknown under pyright strict when numpy is absent.
    "numpy>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
