[project]
name = "mtgdeckreck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "polars>=1.0",
    # The vector store — retrieval reads it, so it belongs in the default install.
    "chromadb>=1.5.9",
    # Vectors cross the store boundary as numpy arrays, and polars' public
    # signatures reference numpy types (which resolve to Unknown under pyright
    # strict when numpy is absent).
    "numpy>=2.0",
    # The embedding model. A request-time dependency now: retrieval encodes each
    # query with the same model that built the index ([ADR 0012]), so it is no
    # longer optional. The uv index routing below keeps CI off the CUDA wheel.
    # 5.0 is the floor for encode_query()/encode_document(), the asymmetric prompts.
    "sentence-transformers>=5.0",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtg_rag"]

[dependency-groups]
dev = [
    "ruff>=0.12",
    "pyright>=1.1",
    "pytest>=8.4",
    "pre-commit>=4.0",
    "jupyterlab>=4.0",
    "nbstripout>=0.8",
    # Notebook plotting only — not imported by anything under src/.
    "matplotlib>=3.9",
]

# Torch needs explicit index routing, because neither default is what we want:
# the default Windows wheel is CPU-only (useless on the RTX 2070 this embeds on)
# and the default Linux wheel is the full CUDA build (gigabytes, for machines
# that only ever run the tests). cu128 supports sm_75, so Turing is covered.
# `explicit = true` stops these indexes serving any package but torch.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# macOS is deliberately unrouted: PyPI's default wheel is already the right one
# there, carrying CPU and MPS support.
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
